Open links to external pages in a new tab.

--- a/_pages/publications/2008-SEKE.md
+++ b/_pages/publications/2008-SEKE.md
@@ -8,7 +8,7 @@ layout: paper
 Thomas Vogel, Jens Bruhn, and Guido Wirtz. "Autonomous Reconfiguration Procedures for EJB-based Enterprise Applications". In: International Conference on Software Engineering and Knowledge Engineering. SEKE’08. Knowledge Systems Institute Graduate School, 2008, pp. 48--53.
 
 ## Links
-[Paper in the proceedings](http://green.cs.ksi.edu/conference/Proceedings/seke/SEKE2008_Proceedings.pdf)
+[Paper in the proceedings](http://green.cs.ksi.edu/conference/Proceedings/seke/SEKE2008_Proceedings.pdf){:target="_blank"}
 
 ## Abstract
 During the last decades, performance of available hardware resources constantly increased, which enabled the assignment of more and more complex tasks to software systems. As one consequence, the inherent complexity of these software systems also increases, influencing all phases of their lifecycle. The concept of Component Orientation (CO) allows the development of software systems in a modular way through functional decomposition. Administration and maintenance of software systems are addressed by the vision of Autonomic Computing (AC), based on the idea to assign low level administrative tasks to the system itself. With mKernel an AC-infrastructure for component oriented enterprise applications is provided, based on the Enterprise Java Beans (EJB) standard, version 3.0. In contrast to existing approaches, the main advantage of mKernel lies within its standard compliance, not prescribing any additional guidelines for the development of applications to enable their autonomous management. It is realized as plugin for an existing container, not requiring any adjustment of the underlying implementation. Moreover, it provides a very fine grained interface for inspection and manipulation of the managed system, taking the specifics of the supported standard into account. Within this paper we present the opportunities provided by mKernel to control a managed system.
