--- a/_pages/publications/2011-MISE.md
+++ b/_pages/publications/2011-MISE.md
@@ -8,7 +8,7 @@ layout: paper
 Thomas Vogel, Andreas Seibel, and Holger Giese. "The Role of Models and Megamodels at Runtime". In: Models in Software Engineering, Workshops and Symposia at MODELS 2010, Reports and Revised Selected Papers. Ed. by Juergen Dingel and Arnor Solberg. Vol. 6627. Lecture Notes in Computer Science (LNCS). Springer, 2011, pp. 224--238.
 
 ## Links
-[Paper at SpringerLink](https://doi.org/10.1007/978-3-642-21210-9_22)
+[Paper at SpringerLink](https://doi.org/10.1007/978-3-642-21210-9_22){:target="_blank"}
 
 ## Abstract
 In model-driven software development a multitude of interrelated models are used to systematically realize a software system. This results in a complex development process since the models and the relations between the models have to be managed. Similar problems appear when following a model-driven approach for managing software systems at runtime. A multitude of interrelated runtime models are employed simultaneously, and thus they have to be maintained at runtime. While for the development case megamodels have emerged to address the problem of managing models and relations, the problem is rather neglected for the case of runtime models by applying ad-hoc solutions. Therefore, we propose to utilize megamodel concepts for the case of multiple runtime models. Based on the current state of research, we present a categorization of runtime models and conceivable relations between them. The categorization describes the role of interrelated models at runtime and demonstrates that several approaches already employ multiple runtime models and relations. Then, we show how megamodel concepts help in organizing and utilizing runtime models and relations in a model-driven manner while supporting a high level of automation. Finally, the role of interrelated models and megamodels at runtime is discussed for self-adaptive software systems and exemplified by a case study.
