--- a/_pages/publications/2012-MISE.md
+++ b/_pages/publications/2012-MISE.md
@@ -8,7 +8,7 @@ layout: paper
 Thomas Vogel and Holger Giese. "Requirements and Assessment of Languages and Frameworks for Adaptation Models". In: Models in Software Engineering, Workshops and Symposia at MoDELS 2011, Reports and Revised Selected Papers. Ed. by Jörg Kienzle. Vol. 7167. Lecture Notes in Computer Science (LNCS). Springer, 2012, pp. 167--182.
 
 ## Links
-[Paper at SpringerLink](https://doi.org/10.1007/978-3-642-29645-1_18)
+[Paper at SpringerLink](https://doi.org/10.1007/978-3-642-29645-1_18){:target="_blank"}
 
 ## Abstract
 Approaches to self-adaptive software systems use models at runtime to leverage benefits of model-driven engineering (MDE) for providing views on running systems and for engineering feedback loops. Most of these approaches focus on causally connecting runtime models and running systems, and just apply typical MDE techniques, like model transformation, or well-known techniques, like event-condition-action rules, from other fields than MDE to realize a feedback loop. However, elaborating requirements for feedback loop activities for the specific case of runtime models is rather neglected. Therefore, we investigate requirements for Adaptation Models that specify the analysis, decision-making, and planning of adaptation as part of a feedback loop. In particular, we consider requirements for a modeling language of adaptation models and for a framework as the execution environment of adaptation models. Moreover, we discuss patterns for using adaptation models within the feedback loop regarding the structuring of loop activities and the implications on the requirements for adaptation models. Finally, we assess two existing approaches to adaptation models concerning their fitness for the requirements discussed in this paper.
