--- a/_pages/publications/2014-MART.md
+++ b/_pages/publications/2014-MART.md
@@ -8,7 +8,7 @@ layout: paper
 Amel Bennaceur, Robert B. France, Giordano Tamburrelli, Thomas Vogel, Pieter J. Mosterman, Walter Cazzola, Fábio M. Costa, Alfonso Pierantonio, Matthias Tichy, Mehmet Aksit, Pär Emmanuelson, Huang Gang, Nikolaos Georgantas, and David Redlich. "Mechanisms for Leveraging Models at Runtime in Self-adaptive Software". In: Models@run.time. Ed. by Nelly Bencomo, Robert B. France, Betty H. Cheng, and Uwe Assmann. Vol. 8378. Lecture Notes in Computer Science (LNCS). Springer, 2014, pp. 19--46.
 
 ## Links
-[Paper at SpringerLink](https://doi.org/10.1007/978-3-319-08915-7_2)
+[Paper at SpringerLink](https://doi.org/10.1007/978-3-319-08915-7_2){:target="_blank"}
 
 ## Abstract
 Modern software systems are often required to adapt their behavior at runtime in order to maintain or enhance their utility in dynamic environments. Models at runtime research aims to provide suitable abstractions, techniques, and tools to manage the complexity of adapting software systems at runtime. In this chapter, we discuss challenges associated with developing mechanisms that leverage models at runtime to support runtime software adaptation. Specifically, we discuss challenges associated with developing effective mechanisms for supervising running systems, reasoning about and planning adaptations, maintaining consistency among multiple runtime models, and maintaining fidelity of runtime models with respect to the running system and its environment. We discuss related problems and state-of-the-art mechanisms, and identify open research challenges.
