--- a/_pages/publications/2009-ICAC.md
+++ b/_pages/publications/2009-ICAC.md
@@ -8,7 +8,7 @@ layout: paper
 Thomas Vogel, Stefan Neumann, Stephan Hildebrandt, Holger Giese, and Basil Becker. "Model-Driven Architectural Monitoring and Adaptation for Autonomic Systems". In: International Conference on Autonomic Computing and Communications. ICAC ’09. ACM, 2009, pp. 67--68.
 
 ## Links
-[Article at the ACM DL](https://doi.org/10.1145/1555228.1555249)
+[Article at the ACM DL](https://doi.org/10.1145/1555228.1555249){:target="_blank"}
 
 ## Abstract
 Architectural monitoring and adaptation allows self-management capabilities of autonomic systems to realize more powerful adaptation steps, which observe and adjust not only parameters but also the software architecture. However, monitoring as well as adaptation of the architecture of a running system in addition to the parameters are considerably more complex and only rather limited and costly solutions are available today. In this paper we propose a model-driven approach to ease the development of architectural monitoring and adaptation for autonomic systems. Using meta models and model transformation techniques, we were able to realize an incremental synchronization between the run-time system and models for different self-management activities. The synchronization might be triggered when needed and therefore the activities can operate concurrently.
