--- a/_pages/publications/2010-MRT.md
+++ b/_pages/publications/2010-MRT.md
@@ -8,7 +8,7 @@ layout: paper
 Thomas Vogel, Andreas Seibel, and Holger Giese. "Toward Megamodels at Runtime". In: International Workshop on Models@run.time. Vol. 641. CEUR Workshop Proceedings. CEUR-WS.org, 2010, pp. 13--24. _(best paper)_.
 
 ## Links
-[Paper at CEUR-WS.org](http://ceur-ws.org/Vol-641/paper_14.pdf)
+[Paper at CEUR-WS.org](http://ceur-ws.org/Vol-641/paper_14.pdf){:target="_blank"}
 
 ## Abstract
 In model-driven software development a multitude of development models that are related with each other are used to systematically realize a software system. This results in a complex development process since these models and the relations between these models have to be managed. Similar problems appear when following a model-driven approach for managing software systems at runtime. A multitude of runtime models that are related with each other are likely to be employed simultaneously, and thus they have to be maintained at runtime. While for the development case megamodels have emerged to address the problem of managing development models and relations, the problem is rather neglected for the case of runtime models by applying ad-hoc solutions. Therefore, we propose to utilize concepts of megamodels in the domain of runtime system management. Based on existing work in the research field of runtime models, we demonstrate that different kinds of runtime models and relations are already employed simultaneously in several approaches. Then, we show how megamodels help in structuring and maintaining runtime models and relations in a model-driven manner while supporting a high level of automation. Finally, we present two case studies exemplifying the application and benefits of megamodels at runtime.
