--- a/_pages/publications/2016-SASO.md
+++ b/_pages/publications/2016-SASO.md
@@ -8,7 +8,7 @@ layout: paper
 Sona Ghahremani, Holger Giese, and Thomas Vogel. "Towards Linking Adaptation Rules to the Utility Function for Dynamic Architectures". In: International Conference on Self-Adaptive and Self-Organizing Systems. SASO ’16. IEEE, 2016, pp. 142--143.
 
 ## Links
-[Paper at IEEE Xplore](https://doi.org/10.1109/SASO.2016.21)
+[Paper at IEEE Xplore](https://doi.org/10.1109/SASO.2016.21){:target="_blank"}
 
 ## Abstract
 To benefit from utility-driven and rule-based approaches to self-adaptation, we propose combining both by defining and linking the utility function and the adaptation rules in a pattern-based way at the architectural level.
