Add further links to publishers.

--- a/_pages/publications/2016-SASO.md
+++ b/_pages/publications/2016-SASO.md
@@ -10,6 +10,8 @@ Sona Ghahremani, Holger Giese, and Thomas Vogel. "Towards Linking Adaptation Rul
 ## Links
 [Paper at IEEE Xplore](https://doi.org/10.1109/SASO.2016.21){:target="_blank"}
 
+[Paper in the IEEE CSDL](http://doi.ieeecomputersociety.org/10.1109/SASO.2016.21){:target="_blank"}
+
 ## Abstract
 To benefit from utility-driven and rule-based approaches to self-adaptation, we propose combining both by defining and linking the utility function and the adaptation rules in a pattern-based way at the architectural level.
 
