--- a/_pages/publications/2017-TAAS.md
+++ b/_pages/publications/2017-TAAS.md
@@ -10,6 +10,14 @@ Antonio Filieri, Martina Maggio, Konstantinos Angelopoulos, Nicolás D’ippolit
 ## Links
 [Article in the ACM DL](https://doi.org/10.1145/3024188){:target="_blank"}
 
+<br />
+<!-- ACM DL Article: Control Strategies for Self-Adaptive Software Systems -->
+<div class="acmdlitem" id="item3024188"><img src="http://dl.acm.org/images/oa.gif" width="25" height="25" border="0" alt="ACM DL Author-ize service" style="vertical-align:middle"/><a href="https://dl.acm.org/authorize?N21277" title="Free copy by the ACM DL Author-ize service">Free copy by the ACM DL Author-ize service</a>
+</div>
+<!-- ACM DL Bibliometrics: Control Strategies for Self-Adaptive Software Systems-->
+<div class="acmdlstat" id ="stats3024188"><iframe src="https://dl.acm.org/authorizestats?N21277" width="100%" height="30" scrolling="no" frameborder="0">frames are not supported</iframe></div>
+
+
 ## Abstract
 The pervasiveness and growing complexity of software systems are challenging software engineering to design systems that can adapt their behavior to withstand unpredictable, uncertain, and continuously changing execution environments. Control theoretical adaptation mechanisms have received growing interest from the software engineering community in the last few years for their mathematical grounding, allowing formal guarantees on the behavior of the controlled systems. However, most of these mechanisms are tailored to specific applications and can hardly be generalized into broadly applicable software design and development processes. This article discusses a reference control design process, from goal identification to the verification and validation of the controlled system. A taxonomy of the main control strategies is introduced, analyzing their applicability to software adaptation for both functional and nonfunctional goals. A brief extract on how to deal with uncertainty complements the discussion. Finally, the article highlights a set of open challenges, both for the software engineering and the control theory research communities.
 
