--- a/_pages/publications/2014-TAAS.md
+++ b/_pages/publications/2014-TAAS.md
@@ -10,6 +10,10 @@ Thomas Vogel and Holger Giese. "Model-Driven Engineering of Self-Adaptive Softwa
 ## Links
 [Article in the ACM DL](https://doi.org/10.1145/2555612){:target="_blank"}
 
+<!-- ACM DL Article: Model-Driven Engineering of Self-Adaptive Software with EUREMA -->
+<div class="acmdlitem" id="item2555612"><img src="http://dl.acm.org/images/oa.gif" width="25" height="25" border="0" alt="ACM DL Author-ize service" style="vertical-align:middle"/><a href="https://dl.acm.org/authorize?N96416" title="Model-Driven Engineering of Self-Adaptive Software with EUREMA">Free copy by the ACM DL Author-ize service</a></div>
+
+
 ## Abstract
 The development of self-adaptive software requires the engineering of an adaptation engine that controls the underlying adaptable software by feedback loops. The engine often describes the adaptation by runtime models representing the adaptable software and by activities such as analysis and planning that use these models. To systematically address the interplay between runtime models and adaptation activities, runtime megamodels have been proposed. A runtime megamodel is a specific model capturing runtime models and adaptation activities. In this article, we go one step further and present an executable modeling language for ExecUtable RuntimE MegAmodels (EUREMA) that eases the development of adaptation engines by following a model-driven engineering approach. We provide a domain-specific modeling language and a runtime interpreter for adaptation engines, in particular feedback loops. Megamodels are kept alive at runtime and by interpreting them, they are directly executed to run feedback loops. Additionally, they can be dynamically adjusted to adapt feedback loops. Thus, EUREMA supports development by making feedback loops explicit at a higher level of abstraction and it enables solutions where multiple feedback loops interact or operate on top of each other and self-adaptation co-exists with offline adaptation for evolution.
 
