SEAMS18 and some corrections.

--- a/_pages/publications/2017-ICAC.md
+++ b/_pages/publications/2017-ICAC.md
@@ -5,7 +5,7 @@ layout: paper
 ---
 
 ## Reference
-Sona Ghahremani, Holger Giese, and Thomas Vogel. "Efficient Utility-Driven Self-Healing Employing Adaptation Rules for Large Dynamic Architectures". In: International Conference on Autonomic Computing. ICAC '17. IEEE, 2017, pp. tba. _(accepted and ***nominated for the Karsten Schwan Best Paper Award***)_.
+Sona Ghahremani, Holger Giese, and Thomas Vogel. "Efficient Utility-Driven Self-Healing Employing Adaptation Rules for Large Dynamic Architectures". In: International Conference on Autonomic Computing. ICAC '17. IEEE, 2017, pp. tba. _(accepted and **nominated for the Karsten Schwan Best Paper Award**)_.
 
 ## Links
 _tba_
