Add ICAC'17 preprint.

--- a/_pages/publications/2017-ICAC.md
+++ b/_pages/publications/2017-ICAC.md
@@ -10,6 +10,8 @@ Sona Ghahremani, Holger Giese, and Thomas Vogel. "Efficient Utility-Driven Self-
 <img src="/assets/img/icac17_best_paper_award.png" alt="Me" style="width: 300px; margin-top: 2em; margin-left: 2em; margin-right: 25px;"/>
 
 ## Links
+[Preprint](/assets/pdf/2017-ICAC.pdf)
+
 [Paper at IEEE Xplore](https://doi.org/10.1109/ICAC.2017.35){:target="_blank"}
 
 [Paper in the IEEE CSDL](http://doi.ieeecomputersociety.org/10.1109/ICAC.2017.35){:target="_blank"}
