--- a/_pages/publications/2008-SEKE.md
+++ b/_pages/publications/2008-SEKE.md
@@ -11,7 +11,7 @@ Thomas Vogel, Jens Bruhn, and Guido Wirtz. "Autonomous Reconfiguration Procedure
 [Paper in the proceedings](http://www.ksi.edu/seke/Proceedings/seke/SEKE2008_Proceedings.pdf){:target="_blank"}
 
 ## Abstract
-During the last decades, performance of available hardware resources constantly increased, which enabled the assignment of more and more complex tasks to software systems. As one consequence, the inherent complexity of these software systems also increases, influencing all phases of their lifecycle. The concept of Component Orientation (CO) allows the development of software systems in a modular way through functional decomposition. Administration and maintenance of software systems are addressed by the vision of Autonomic Computing (AC), based on the idea to assign low level administrative tasks to the system itself. With mKernel an AC-infrastructure for component oriented enterprise applications is provided, based on the Enterprise Java Beans (EJB) standard, version 3.0. In contrast to existing approaches, the main advantage of mKernel lies within its standard compliance, not prescribing any additional guidelines for the development of applications to enable their autonomous management. It is realized as plugin for an existing container, not requiring any adjustment of the underlying implementation. Moreover, it provides a very fine grained interface for inspection and manipulation of the managed system, taking the specifics of the supported standard into account. Within this paper we present the opportunities provided by mKernel to control a managed system.
+Enterprise Applications (EA) are complex software systems for supporting the business of companies. Evolution of an EA should not affect its availability, e.g., because of a temporal shutdown, business operations may be affected. One possibility to address this problem is the seamless reconfiguration of the affected EA, i.e., applying the relevant changes while the system is running. Our approach to seamless reconfiguration focuses on component-oriented EAs. It is based on the Autonomic Computing infrastructure mKernel that enables the management of EAs that are realized using Enterprise Java Beans (EJB) 3.0 technology. In contrast to other approaches that provide no or only limited reconfiguration facilities, our approach consists of a comprehensive set of steps, that perform fine-grained reconfiguration tasks. These steps can be combined into generic and autonomous reconfiguration procedures for EJB-based EAs. The procedures are not limited to a certain reconfiguration strategy. Instead, our approach provides several reusable strategies and is extensible w.r.t. the opportunity to integrate new ones.
 
 ## BibTeX
 
