--- a/_pages/publications/2017-ICAC.md
+++ b/_pages/publications/2017-ICAC.md
@@ -5,12 +5,12 @@ layout: paper
 ---
 
 ## Reference
-Sona Ghahremani, Holger Giese, and Thomas Vogel. "Efficient Utility-Driven Self-Healing Employing Adaptation Rules for Large Dynamic Architectures". In: International Conference on Autonomic Computing. ICAC '17. IEEE, 2017, pp. 59--68. _(**Karsten Schwan Best Paper Award**)_.
+Sona Ghahremani, Holger Giese, and Thomas Vogel. "Efficient Utility-Driven Self-Healing Employing Adaptation Rules for Large Dynamic Architectures". In: International Conference on Autonomic Computing. ICAC '17. IEEE, 2017, pp. 59--68. DOI: 10.1109/ICAC.2017.35 _(**Karsten Schwan Best Paper Award**)_
 
 <img src="/assets/img/icac17_best_paper_award.png" alt="Me" style="width: 300px; margin-top: 2em; margin-left: 2em; margin-right: 25px;"/>
 
 ## Links
-[Preprint](/assets/pdf/2017-ICAC.pdf)
+[Preprint at arxiv.org](https://arxiv.org/abs/1805.03549){:target="_blank"}
 
 [Paper at IEEE Xplore](https://doi.org/10.1109/ICAC.2017.35){:target="_blank"}
 
