--- a/_pages/publications/2017-TAAS.md
+++ b/_pages/publications/2017-TAAS.md
@@ -23,7 +23,7 @@ The pervasiveness and growing complexity of software systems are challenging sof
 
 <div class="bibtex">
 <pre>@article{2017-TAAS,
-   author = {Filieri, Antonioz and Maggio, Martina and Angelopoulos, Konstantinos and D’Ippolito, Nicolas and Gerostathopoulos, Ilias and Hempel, Andreas Berndt and Hoffmann, Henry and Jamshidi, Pooyan and Kalyvianaki, Evangelia and Klein, Cristian and Krikava, Filip and Misailovic, Sasa and Papadopoulos, Alessandro Vittorio and Ray, Suprio and Sharifloo, Amir M. and Shevtsov, Stepan and Ujma, Mateusz and Vogel, Thomas},
+   author = {Filieri, Antonio and Maggio, Martina and Angelopoulos, Konstantinos and D’Ippolito, Nicolas and Gerostathopoulos, Ilias and Hempel, Andreas Berndt and Hoffmann, Henry and Jamshidi, Pooyan and Kalyvianaki, Evangelia and Klein, Cristian and Krikava, Filip and Misailovic, Sasa and Papadopoulos, Alessandro Vittorio and Ray, Suprio and Sharifloo, Amir M. and Shevtsov, Stepan and Ujma, Mateusz and Vogel, Thomas},
    title = {Control Strategies for Self-Adaptive Software Systems},
    year = {2017},
    journal = {ACM Trans. Auton. Adapt. Syst.},
