Add links to OA versions.

--- a/_pages/publications/2011-MISE.md
+++ b/_pages/publications/2011-MISE.md
@@ -5,9 +5,11 @@ layout: paper
 ---
 
 ## Reference
-Thomas Vogel, Andreas Seibel, and Holger Giese. "The Role of Models and Megamodels at Runtime". In: Models in Software Engineering, Workshops and Symposia at MODELS 2010, Reports and Revised Selected Papers. Ed. by Juergen Dingel and Arnor Solberg. Vol. 6627. Lecture Notes in Computer Science (LNCS). Springer, 2011, pp. 224--238.
+Thomas Vogel, Andreas Seibel, and Holger Giese. "The Role of Models and Megamodels at Runtime". In: Models in Software Engineering, Workshops and Symposia at MODELS 2010, Reports and Revised Selected Papers. Ed. by Juergen Dingel and Arnor Solberg. Vol. 6627. Lecture Notes in Computer Science (LNCS). Springer, 2011, pp. 224--238. DOI: 10.1007/978-3-642-21210-9\_22
 
 ## Links
+[OA Version](https://arxiv.org/abs/1805.07396){:target="_blank"}
+
 [Paper at SpringerLink](https://doi.org/10.1007/978-3-642-21210-9_22){:target="_blank"}
 
 ## Abstract
