--- a/_pages/publications/2014-MART.md
+++ b/_pages/publications/2014-MART.md
@@ -5,9 +5,11 @@ layout: paper
 ---
 
 ## Reference
-Amel Bennaceur, Robert B. France, Giordano Tamburrelli, Thomas Vogel, Pieter J. Mosterman, Walter Cazzola, Fábio M. Costa, Alfonso Pierantonio, Matthias Tichy, Mehmet Aksit, Pär Emmanuelson, Huang Gang, Nikolaos Georgantas, and David Redlich. "Mechanisms for Leveraging Models at Runtime in Self-adaptive Software". In: Models@run.time. Ed. by Nelly Bencomo, Robert B. France, Betty H. Cheng, and Uwe Assmann. Vol. 8378. Lecture Notes in Computer Science (LNCS). Springer, 2014, pp. 19--46.
+Amel Bennaceur, Robert B. France, Giordano Tamburrelli, Thomas Vogel, Pieter J. Mosterman, Walter Cazzola, Fábio M. Costa, Alfonso Pierantonio, Matthias Tichy, Mehmet Aksit, Pär Emmanuelson, Huang Gang, Nikolaos Georgantas, and David Redlich. "Mechanisms for Leveraging Models at Runtime in Self-adaptive Software". In: Models@run.time. Ed. by Nelly Bencomo, Robert B. France, Betty H. Cheng, and Uwe Assmann. Vol. 8378. Lecture Notes in Computer Science (LNCS). Springer, 2014, pp. 19--46. DOI: 10.1007/978-3-319-08915-7\_2
 
 ## Links
+[OA Version](https://zenodo.org/record/1248933){:target="_blank"}
+
 [Paper at SpringerLink](https://doi.org/10.1007/978-3-319-08915-7_2){:target="_blank"}
 
 ## Abstract
