--- a/_pages/publications/2010-MISE.md
+++ b/_pages/publications/2010-MISE.md
@@ -5,9 +5,11 @@ layout: paper
 ---
 
 ## Reference
-Thomas Vogel, Stefan Neumann, Stephan Hildebrandt, Holger Giese, and Basil Becker. "Incremental Model Synchronization for Efficient Run-Time Monitoring". In: Models in Software Engineering, Workshops and Symposia at MODELS 2009, Reports and Revised Selected Papers. Ed. by Sudipto Ghosh. Vol. 6002. Lecture Notes in Computer Science (LNCS). Springer, 2010, pp. 124--139.
+Thomas Vogel, Stefan Neumann, Stephan Hildebrandt, Holger Giese, and Basil Becker. "Incremental Model Synchronization for Efficient Run-Time Monitoring". In: Models in Software Engineering, Workshops and Symposia at MODELS 2009, Reports and Revised Selected Papers. Ed. by Sudipto Ghosh. Vol. 6002. Lecture Notes in Computer Science (LNCS). Springer, 2010, pp. 124--139. DOI: 10.1007/978-3-642-12261-3\_13
 
 ## Links
+[OA Version](https://zenodo.org/record/1248941){:target="_blank"}
+
 [Paper at SpringerLink](https://doi.org/10.1007/978-3-642-12261-3_13){:target="_blank"}
 
 ## Abstract
