Add links to OA versions and my arXiv profile.

--- a/_pages/publications/2009-ICAC.md
+++ b/_pages/publications/2009-ICAC.md
@@ -8,6 +8,8 @@ layout: paper
 Thomas Vogel, Stefan Neumann, Stephan Hildebrandt, Holger Giese, and Basil Becker. "Model-Driven Architectural Monitoring and Adaptation for Autonomic Systems". In: International Conference on Autonomic Computing and Communications. ICAC ’09. ACM, 2009, pp. 67--68. DOI: 10.1145/1555228.1555249
 
 ## Links
+[OA Version](https://arxiv.org/abs/1805.08677){:target="_blank"}
+
 <p>
 <!-- ACM DL Article: Model-driven architectural monitoring and adaptation for autonomic systems -->
 <div class="acmdlitem" id="item1555249"><img src="http://dl.acm.org/images/oa.gif" width="25" height="25" border="0" alt="ACM DL Author-ize service" style="vertical-align:middle"/><a href="https://dl.acm.org/authorize?N96418" title="Model-driven architectural monitoring and adaptation for autonomic systems">Free copy by the ACM DL Author-ize service</a></div>
