Add 2018-SBCARS-DistinguishedPCMemberAward and change alt text for ICAC17 award.

--- a/_pages/publications/2017-ICAC.md
+++ b/_pages/publications/2017-ICAC.md
@@ -7,7 +7,7 @@ layout: paper
 ## Reference
 Sona Ghahremani, Holger Giese, and Thomas Vogel. "Efficient Utility-Driven Self-Healing Employing Adaptation Rules for Large Dynamic Architectures". In: International Conference on Autonomic Computing. ICAC '17. IEEE, 2017, pp. 59--68. DOI: 10.1109/ICAC.2017.35 _(**Karsten Schwan Best Paper Award**)_
 
-<img src="/assets/img/icac17_best_paper_award.png" alt="Me" style="width: 300px; margin-top: 2em; margin-left: 2em; margin-right: 25px;"/>
+<img src="/assets/img/icac17_best_paper_award.png" alt="ICAC 2017 Karsten Schwan Best Paper Award" style="width: 300px; margin-top: 2em; margin-left: 2em; margin-right: 25px;"/>
 
 ## Links
 [OA Version](https://arxiv.org/abs/1805.03549){:target="_blank"}
