Add SEfIAS report, update news, enable : in page titles using html code.

--- a/_pages/publications/2013-TR.md
+++ b/_pages/publications/2013-TR.md
@@ -1,5 +1,5 @@
 ---
-title: Model-Driven Engineering of Adaptation Engines for Self-Adaptive Software -- Executable Runtime Megamodels
+title: Model-Driven Engineering of Adaptation Engines for Self-Adaptive Software&#058; Executable Runtime Megamodels
 permalink: publications/2013-TR.html
 layout: paper
 ---
