--- a/_pages/publications/2019-SASO.md
+++ b/_pages/publications/2019-SASO.md
@@ -1,11 +1,11 @@
 ---
-title: Dynamically Discovering Optimal Configurations for Runtime Situations
+title: Planning as Optimization&#058; Dynamically Discovering Optimal Configurations for Runtime Situations
 permalink: publications/2019-SASO.html
 layout: paper
 ---
 
 ## Reference
-Erik Fredericks, Ilias Gerostathopoulos, Christian Krupitzer, and Thomas Vogel. "Dynamically Discovering Optimal Configurations for Runtime Situations". In: International Conference on Self-Adaptive and Self-Organizing Systems. SASO '19. IEEE, 2019, pp. _tba_. DOI: _tba_
+Erik Fredericks, Ilias Gerostathopoulos, Christian Krupitzer, and Thomas Vogel. "Planning as Optimization: Dynamically Discovering Optimal Configurations for Runtime Situations". In: International Conference on Self-Adaptive and Self-Organizing Systems. SASO '19. IEEE, 2019, pp. _tba_. DOI: _tba_
 
 ## Links
 [OA Version](https://arxiv.org/abs/1905.01071){:target="_blank"}
@@ -18,7 +18,7 @@ The large number of possible configurations of modern software-based systems, co
 <div class="bibtex">
 <pre>@InProceedings{2016-SASO,
     author = {Fredericks, Erik and Gerostathopoulos, Ilias and Krupitzer, Christian and Vogel, Thomas},
-    title = {Dynamically Discovering Optimal Configurations for Runtime Situations},
+    title = {Planning as Optimization: Dynamically Discovering Optimal Configurations for Runtime Situations},
     year = {2019},
     booktitle = {International Conference on Self-Adaptive and Self-Organizing Systems},
     series = {SASO~'19},
