--- a/_pages/publications/2009-ICAC.md
+++ b/_pages/publications/2009-ICAC.md
@@ -8,7 +8,7 @@ layout: paper
 Thomas Vogel, Stefan Neumann, Stephan Hildebrandt, Holger Giese, and Basil Becker. "Model-Driven Architectural Monitoring and Adaptation for Autonomic Systems". In: International Conference on Autonomic Computing and Communications. ICAC ’09. ACM, 2009, pp. 67--68. DOI: 10.1145/1555228.1555249
 
 ## Links
-[OA Version](https://arxiv.org/abs/1805.08677){:target="_blank"}
+[Open access version](https://arxiv.org/abs/1805.08677){:target="_blank"}
 
 <p>
 <!-- ACM DL Article: Model-driven architectural monitoring and adaptation for autonomic systems -->
