--- a/_pages/publications/2011-MRT.md
+++ b/_pages/publications/2011-MRT.md
@@ -10,7 +10,7 @@ Thomas Vogel and Holger Giese. "Language and Framework Requirements for Adaptati
 ## Links
 [Paper at CEUR-WS.org (pdf)](http://ceur-ws.org/Vol-794/paper_8.pdf){:target="_blank"}
 
-[OA Version at Zenodo](https://zenodo.org/record/1248918){:target="_blank"}
+[Open access version](https://doi.org/10.5281/zenodo.1248918){:target="_blank"}
 
 
 ## Abstract
