--- a/_pages/publications/2014-TAAS.md
+++ b/_pages/publications/2014-TAAS.md
@@ -8,7 +8,7 @@ layout: paper
 Thomas Vogel and Holger Giese. "Model-Driven Engineering of Self-Adaptive Software with EUREMA". In: ACM Trans. Auton. Adapt. Syst. 8.4 (2014), 18:1--18:33. DOI: 10.1145/2555612
 
 ## Links
-[OA Version](https://arxiv.org/abs/1805.07353){:target="_blank"}
+[Open access version](https://arxiv.org/abs/1805.07353){:target="_blank"}
 
 <p>
 <!-- ACM DL Article: Model-Driven Engineering of Self-Adaptive Software with EUREMA -->
