--- a/_pages/publications/2015-FSEN.md
+++ b/_pages/publications/2015-FSEN.md
@@ -8,7 +8,7 @@ layout: paper
 Holger Giese, Thomas Vogel, and Sebastian Wätzoldt. "Towards Smart Systems of Systems". In: International Conference on Fundamentals of Software Engineering (FSEN ’15). Vol. 9392. Lecture Notes in Computer Science (LNCS). Springer, 2015, pp. 1--29. DOI: 10.1007/978-3-319-24644-4\_1 _(invited paper)_.
 
 ## Links
-[OA Version](https://zenodo.org/record/1248943){:target="_blank"}
+[Open access version](https://zenodo.org/record/1248943){:target="_blank"}
 
 [Paper at SpringerLink](https://doi.org/10.1007/978-3-319-24644-4_1){:target="_blank"}
 
