--- a/_pages/publications/2016-SASO.md
+++ b/_pages/publications/2016-SASO.md
@@ -9,7 +9,7 @@ Sona Ghahremani, Holger Giese, and Thomas Vogel. "Towards Linking Adaptation Rul
 
 ## Links
 
-[OA Version](https://arxiv.org/abs/1805.03599){:target="_blank"}
+[Open access version](https://arxiv.org/abs/1805.03599){:target="_blank"}
 
 [Paper at IEEE CSDL](http://doi.ieeecomputersociety.org/10.1109/SASO.2016.21){:target="_blank"}
 
