--- a/_pages/publications/2019-SASO.md
+++ b/_pages/publications/2019-SASO.md
@@ -8,7 +8,7 @@ layout: paper
 Erik Fredericks, Ilias Gerostathopoulos, Christian Krupitzer, and Thomas Vogel. "Planning as Optimization: Dynamically Discovering Optimal Configurations for Runtime Situations". In: International Conference on Self-Adaptive and Self-Organizing Systems. SASO '19. IEEE, 2019, pp. _tba_. DOI: _tba_
 
 ## Links
-[Open Access Version](https://arxiv.org/abs/1905.01071){:target="_blank"}
+[Open access version](https://arxiv.org/abs/1905.01071){:target="_blank"}
 
 [Accompanying material: literature study](https://doi.org/10.5281/zenodo.2584266){:target="_blank"}
 
