--- a/_pages/publications/2009-MRTa.md
+++ b/_pages/publications/2009-MRTa.md
@@ -10,7 +10,7 @@ Thomas Vogel, Stefan Neumann, Stephan Hildebrandt, Holger Giese, and Basil Becke
 ## Links
 [Paper at CEUR-WS.org (pdf)](http://ceur-ws.org/Vol-509/paper_8.pdf){:target="_blank"}
 
-[OA Version at Zenodo](https://zenodo.org/record/1248892){:target="_blank"}
+[Open access version](https://doi.org/10.5281/zenodo.1248892){:target="_blank"}
 
 ## Abstract
 The model-driven engineering community has developed expressive model transformation techniques based on meta models, which ease the specification of translations between different model types. Thus, it is attractive to also apply these techniques for autonomic and self-
