--- a/_pages/publications/2012-SFM.md
+++ b/_pages/publications/2012-SFM.md
@@ -8,7 +8,7 @@ layout: paper
 Holger Giese, Leen Lambers, Basil Becker, Stephan Hildebrandt, Stefan Neumann, Thomas Vogel, and Sebastian Wätzoldt. "Graph Transformations for MDE, Adaptation, and Models at Runtime". In: Formal Methods for Model-Driven Engineering. Ed. by Marco Bernardo, Vittorio Cortellessa, and Alfonso Pierantonio. Vol. 7320. Lecture Notes in Computer Science (LNCS). Springer, 2012, pp. 137--191. DOI: 10.1007/978-3-642-30982-3\_5
 
 ## Links
-[OA Version](https://zenodo.org/record/1248920){:target="_blank"}
+[Open access version](https://zenodo.org/record/1248920){:target="_blank"}
 
 [Paper at SpringerLink](https://doi.org/10.1007/978-3-642-30982-3_5){:target="_blank"}
 
