--- a/_pages/publications/2014-MRT.md
+++ b/_pages/publications/2014-MRT.md
@@ -10,7 +10,7 @@ Thomas Vogel and Holger Giese. "On Unifying Development Models and Runtime Model
 ## Links
 [Paper at CEUR-WS.org (pdf)](http://ceur-ws.org/Vol-1270/mrt14_submission_7.pdf){:target="_blank"}
 
-[OA Version at Zenodo](https://zenodo.org/record/1248935){:target="_blank"}
+[Open access version](https://doi.org/10.5281/zenodo.1248935){:target="_blank"}
 
 ## Abstract
 Models@run.time research primarily focuses on developing and using self-representations, that is, runtime models reflecting running software systems. Such models are the basis for feedback loops to monitor, analyze, and adapt these systems while the goal is typically to completely automate these feedback loops (cf. self-adaptation). This focus ignores (1) the beneficial use of runtime models for (manual) maintenance, which can already be observed in practice, and (2) the inevitable coexistence of self-adaptation and maintenance. Both issues require the integration of development (or maintenance) models and runtime models. In this position paper, we envision the unification of development and runtime models to systematically realize the integration and we discuss the benefits of this unification for addressing these issues with an illustrative example. We claim that Models@run.time research should broaden its focus to the unification to support an incremental adoption of runtime models from manual maintenance to automated self-adaptation, and the coexistence. Finally, we discuss Models@run.time challenges for achieving this claim.
