--- a/_pages/publications/2017-ICAC.md
+++ b/_pages/publications/2017-ICAC.md
@@ -10,7 +10,7 @@ Sona Ghahremani, Holger Giese, and Thomas Vogel. "Efficient Utility-Driven Self-
 <img src="/assets/img/icac17_best_paper_award.png" alt="ICAC 2017 Karsten Schwan Best Paper Award" style="width: 300px; margin-top: 2em; margin-left: 2em; margin-right: 25px;"/>
 
 ## Links
-[OA Version](https://arxiv.org/abs/1805.03549){:target="_blank"}
+[Open access version](https://arxiv.org/abs/1805.03549){:target="_blank"}
 
 [Paper at IEEE Xplore](https://doi.org/10.1109/ICAC.2017.35){:target="_blank"}
 
