--- a/_pages/publications/2017-TAAS.md
+++ b/_pages/publications/2017-TAAS.md
@@ -8,7 +8,7 @@ layout: paper
 Antonio Filieri, Martina Maggio, Konstantinos Angelopoulos, Nicolás D’ippolito, Ilias Gerostathopoulos, Andreas Berndt Hempel, Henry Hoffmann, Pooyan Jamshidi, Evangelia Kalyvianaki, Cristian Klein, Filip Krikava, Sasa Misailovic, Alessandro V. Papadopoulos, Suprio Ray, Amir M. Sharifloo, Stepan Shevtsov, Mateusz Ujma, and Thomas Vogel. "Control Strategies for Self-Adaptive Software Systems". In: ACM Trans. Auton. Adapt. Syst. 11.4 (2017), 24:1--24:31. DOI: 10.1145/3024188
 
 ## Links
-[OA Version](https://zenodo.org/record/1245483){:target="_blank"}
+[Open access version](https://zenodo.org/record/1245483){:target="_blank"}
 
 <p>
 <!-- ACM DL Article: Control Strategies for Self-Adaptive Software Systems -->
