--- a/_pages/publications/2019-SASO.md
+++ b/_pages/publications/2019-SASO.md
@@ -5,10 +5,12 @@ layout: paper
 ---
 
 ## Reference
-Erik Fredericks, Ilias Gerostathopoulos, Christian Krupitzer, and Thomas Vogel. "Planning as Optimization: Dynamically Discovering Optimal Configurations for Runtime Situations". In: International Conference on Self-Adaptive and Self-Organizing Systems. SASO '19. IEEE, 2019, pp. _tba_. DOI: _tba_
+Erik Fredericks, Ilias Gerostathopoulos, Christian Krupitzer, and Thomas Vogel. "Planning as Optimization: Dynamically Discovering Optimal Configurations for Runtime Situations". In: International Conference on Self-Adaptive and Self-Organizing Systems. SASO '19. IEEE, 2019, pp. _tba_. DOI: 10.1109/SASO.2019.00010
 
 ## Links
 [Open access version](https://arxiv.org/abs/1905.01071){:target="_blank"}
+
+[Paper at IEEE Xplore](https://doi.org/10.1109/SASO.2019.00010){:target="_blank"}
 
 [Accompanying material: literature study](https://doi.org/10.5281/zenodo.2584266){:target="_blank"}
 
@@ -24,10 +26,10 @@ The large number of possible configurations of modern software-based systems, co
     author = {Fredericks, Erik and Gerostathopoulos, Ilias and Krupitzer, Christian and Vogel, Thomas},
     title = {Planning as Optimization: Dynamically Discovering Optimal Configurations for Runtime Situations},
     year = {2019},
-    booktitle = {International Conference on Self-Adaptive and Self-Organizing Systems},
+    booktitle = {13th International Conference on Self-Adaptive and Self-Organizing Systems},
     series = {SASO~'19},
     publisher = {IEEE},
-    pages = {},
-    doi = {},
+    pages = {1--10},
+    doi = {10.1109/SASO.2019.00010},
 }</pre>
 </div>
