Add page number for SASO'19.

--- a/_pages/publications/2019-SASO.md
+++ b/_pages/publications/2019-SASO.md
@@ -5,7 +5,7 @@ layout: paper
 ---
 
 ## Reference
-Erik Fredericks, Ilias Gerostathopoulos, Christian Krupitzer, and Thomas Vogel. "Planning as Optimization: Dynamically Discovering Optimal Configurations for Runtime Situations". In: International Conference on Self-Adaptive and Self-Organizing Systems. SASO '19. IEEE, 2019, pp. _tba_. DOI: 10.1109/SASO.2019.00010
+Erik Fredericks, Ilias Gerostathopoulos, Christian Krupitzer, and Thomas Vogel. "Planning as Optimization: Dynamically Discovering Optimal Configurations for Runtime Situations". In: International Conference on Self-Adaptive and Self-Organizing Systems. SASO '19. IEEE, 2019, pp. 1--10. DOI: 10.1109/SASO.2019.00010
 
 ## Links
 [Open access version](https://arxiv.org/abs/1905.01071){:target="_blank"}
