--- a/_pages/publications/2008-SEKE.md
+++ b/_pages/publications/2008-SEKE.md
@@ -1,16 +1,15 @@
 ---
 title: Autonomous Reconfiguration Procedures for EJB-based Enterprise Applications
 permalink: publications/2008-SEKE.html
-layout: paper
+layout: page
 ---
 
 ## Reference
 Thomas Vogel, Jens Bruhn, and Guido Wirtz. "Autonomous Reconfiguration Procedures for EJB-based Enterprise Applications". In: International Conference on Software Engineering and Knowledge Engineering. SEKE’08. Knowledge Systems Institute Graduate School, 2008, pp. 48--53.
 
 ## Links
-[Open access version](https://arxiv.org/abs/1803.00049){:target="_blank"}
-
-[Paper (proceedings pdf)](http://ksiresearchorg.ipage.com/seke/Proceedings/seke/SEKE2008_Proceedings.pdf){:target="_blank"}
+* [Open access version](https://arxiv.org/abs/1803.00049){:target="_blank"}
+* [Paper (proceedings pdf)](http://ksiresearchorg.ipage.com/seke/Proceedings/seke/SEKE2008_Proceedings.pdf){:target="_blank"}
 
 ## Abstract
 Enterprise Applications (EA) are complex software systems for supporting the business of companies. Evolution of an EA should not affect its availability, e.g., because of a temporal shutdown, business operations may be affected. One possibility to address this problem is the seamless reconfiguration of the affected EA, i.e., applying the relevant changes while the system is running. Our approach to seamless reconfiguration focuses on component-oriented EAs. It is based on the Autonomic Computing infrastructure mKernel that enables the management of EAs that are realized using Enterprise Java Beans (EJB) 3.0 technology. In contrast to other approaches that provide no or only limited reconfiguration facilities, our approach consists of a comprehensive set of steps, that perform fine-grained reconfiguration tasks. These steps can be combined into generic and autonomous reconfiguration procedures for EJB-based EAs. The procedures are not limited to a certain reconfiguration strategy. Instead, our approach provides several reusable strategies and is extensible w.r.t. the opportunity to integrate new ones.
