--- a/_pages/publications/2009-MRTa.md
+++ b/_pages/publications/2009-MRTa.md
@@ -1,16 +1,15 @@
 ---
 title: Incremental Model Synchronization for Efficient Run-time Monitoring
 permalink: publications/2009-MRTa.html
-layout: paper
+layout: page
 ---
 
 ## Reference
 Thomas Vogel, Stefan Neumann, Stephan Hildebrandt, Holger Giese, and Basil Becker. "Incremental Model Synchronization for Efficient Run-time Monitoring". In: International Workshop on Models@run.time. Vol. 509. CEUR Workshop Proceedings. CEUR-WS.org, 2009, pp. 1--10. _(best paper)_.
 
 ## Links
-[Paper at CEUR-WS.org (pdf)](http://ceur-ws.org/Vol-509/paper_8.pdf){:target="_blank"}
-
-[Open access version](https://doi.org/10.5281/zenodo.1248892){:target="_blank"}
+* [Paper at CEUR-WS.org (pdf)](http://ceur-ws.org/Vol-509/paper_8.pdf){:target="_blank"}
+* [Open access version](https://doi.org/10.5281/zenodo.1248892){:target="_blank"}
 
 ## Abstract
 The model-driven engineering community has developed expressive model transformation techniques based on meta models, which ease the specification of translations between different model types. Thus, it is attractive to also apply these techniques for autonomic and self-
