--- a/_pages/publications/2009-MRTb.md
+++ b/_pages/publications/2009-MRTb.md
@@ -1,16 +1,15 @@
 ---
 title: A Model-Driven Configuration Management System for Advanced IT Service Management
 permalink: publications/2009-MRTb.html
-layout: paper
+layout: page
 ---
 
 ## Reference
 Holger Giese, Andreas Seibel, and Thomas Vogel. "A Model-Driven Configuration Management System for Advanced IT Service Management". In: International Workshop on Models@run.time. Vol. 509. CEUR Workshop Proceedings. CEUR-WS.org, 2009, pp. 61--70.
 
 ## Links
-[Paper at CEUR-WS.org (pdf)](http://ceur-ws.org/Vol-509/paper_7.pdf){:target="_blank"}
-
-[Open access version](https://doi.org/10.5281/zenodo.1248902){:target="_blank"}
+* [Paper at CEUR-WS.org (pdf)](http://ceur-ws.org/Vol-509/paper_7.pdf){:target="_blank"}
+* [Open access version](https://doi.org/10.5281/zenodo.1248902){:target="_blank"}
 
 ## Abstract
 A popular guideline to manage today’s complex and heterogeneous IT systems is the IT Infrastructure Library (ITIL), which provides a catalogue of best practices for IT Service Management (ITSM). However, state-of-the-art implementations of ITIL rely on a set of XML-based standards. To ease manageability and effectively exploit a Configuration Management System (CMS), which is the integral part of ITSM, we suggest in this paper a model-driven CMS by applying Model-Driven Engineering (MDE). Metamodel based models improve the manageability by providing a suitable abstraction, which enables direct user interaction as well as the application of MDE techniques such as model transformations. Furthermore, vital elements of a model-driven CMS are runtime models, which capture the managed system. In addition, this paper reports on a first prototype implementation of a model-driven CMS that exploits runtime models, their automatic maintenance, model-based analysis on these runtime models, and automatic adaptation of the managed system by facilitating changes on runtime models.
