--- a/_pages/publications/2011-MRT.md
+++ b/_pages/publications/2011-MRT.md
@@ -1,17 +1,15 @@
 ---
 title: Language and Framework Requirements for Adaptation Models
 permalink: publications/2011-MRT.html
-layout: paper
+layout: page
 ---
 
 ## Reference
 Thomas Vogel and Holger Giese. "Language and Framework Requirements for Adaptation Models". In: International Workshop on Models@run.time. Vol. 794. CEUR Workshop Proceedings. CEUR-WS.org, 2011, pp. 1--12. _(best paper)_.
 
 ## Links
-[Paper at CEUR-WS.org (pdf)](http://ceur-ws.org/Vol-794/paper_8.pdf){:target="_blank"}
-
-[Open access version](https://doi.org/10.5281/zenodo.1248918){:target="_blank"}
-
+* [Paper at CEUR-WS.org (pdf)](http://ceur-ws.org/Vol-794/paper_8.pdf){:target="_blank"}
+* [Open access version](https://doi.org/10.5281/zenodo.1248918){:target="_blank"}
 
 ## Abstract
 Approaches to self-adaptive software systems use models at runtime to leverage benefits of model-driven engineering (MDE) for pro-
