--- a/_pages/publications/2014-TAAS.md
+++ b/_pages/publications/2014-TAAS.md
@@ -1,21 +1,22 @@
 ---
 title: Model-Driven Engineering of Self-Adaptive Software with EUREMA
 permalink: publications/2014-TAAS.html
-layout: paper
+layout: page
 ---
 
 ## Reference
 Thomas Vogel and Holger Giese. "Model-Driven Engineering of Self-Adaptive Software with EUREMA". In: ACM Trans. Auton. Adapt. Syst. 8.4 (2014), 18:1--18:33. DOI: 10.1145/2555612
 
 ## Links
-[Open access version](https://arxiv.org/abs/1805.07353){:target="_blank"}
-
-<p>
+* [Open access version](https://arxiv.org/abs/1805.07353){:target="_blank"}
+<ul><li>
 <!-- ACM DL Article: Model-Driven Engineering of Self-Adaptive Software with EUREMA -->
-<div class="acmdlitem" id="item2555612"><img src="http://dl.acm.org/images/oa.gif" width="25" height="25" border="0" alt="ACM DL Author-ize service" style="vertical-align:middle"/><a href="https://dl.acm.org/authorize?N96416" title="Model-Driven Engineering of Self-Adaptive Software with EUREMA">Free copy by the ACM DL Author-ize service</a></div>
-</p>
-
-[Article in the ACM DL](https://doi.org/10.1145/2555612){:target="_blank"}
+<!-- <div class="acmdlitem" id="item2555612"> -->
+<a href="https://dl.acm.org/authorize?N96416" title="Model-Driven Engineering of Self-Adaptive Software with EUREMA">Free copy by the ACM DL Author-ize service</a>
+<img src="http://dl.acm.org/images/oa.gif" width="25" height="25" border="0" alt="ACM DL Author-ize service" style="vertical-align:middle"/>
+<!-- </div> -->
+</li></ul>
+* [Article in the ACM DL](https://doi.org/10.1145/2555612){:target="_blank"}
 
 
 ## Abstract
