--- a/_pages/publications/2016-SASO.md
+++ b/_pages/publications/2016-SASO.md
@@ -1,19 +1,16 @@
 ---
 title: Towards Linking Adaptation Rules to the Utility Function for Dynamic Architectures
 permalink: publications/2016-SASO.html
-layout: paper
+layout: page
 ---
 
 ## Reference
 Sona Ghahremani, Holger Giese, and Thomas Vogel. "Towards Linking Adaptation Rules to the Utility Function for Dynamic Architectures". In: International Conference on Self-Adaptive and Self-Organizing Systems. SASO ’16. IEEE, 2016, pp. 142--143. DOI: 10.1109/SASO.2016.21
 
 ## Links
-
-[Open access version](https://arxiv.org/abs/1805.03599){:target="_blank"}
-
-[Paper at IEEE CSDL](http://doi.ieeecomputersociety.org/10.1109/SASO.2016.21){:target="_blank"}
-
-[Paper at IEEE Xplore](https://doi.org/10.1109/SASO.2016.21){:target="_blank"}
+* [Open access version](https://arxiv.org/abs/1805.03599){:target="_blank"}
+* [Paper at IEEE CSDL](http://doi.ieeecomputersociety.org/10.1109/SASO.2016.21){:target="_blank"}
+* [Paper at IEEE Xplore](https://doi.org/10.1109/SASO.2016.21){:target="_blank"}
 
 
 ## Abstract
