--- a/_pages/publications/2019-ES4CPS.md
+++ b/_pages/publications/2019-ES4CPS.md
@@ -1,16 +1,15 @@
 ---
 title: Explainable Software for Cyber-Physical Systems (ES4CPS)&#058; Report from the GI Dagstuhl Seminar 19023, January 06-11 2019, Schloss Dagstuhl
 permalink: publications/2019-ES4CPS.html
-layout: paper
+layout: page
 ---
 
 ## Reference
 Joel Greenyer, Malte Lochau, and Thomas Vogel, eds. "Explainable Software for Cyber-Physical Systems (ES4CPS): Report from the GI Dagstuhl Seminar 19023, January 06-11 2019, Schloss Dagstuhl". 	arXiv:1904.11851. 2019.
 
 ## Links
-[Report (open access)](https://arxiv.org/abs/1904.11851){:target="_blank"}
-
-[Seminar page](https://thomas-vogel.github.io/ES4CPS/){:target="_blank"}
+* [Report (open access)](https://arxiv.org/abs/1904.11851){:target="_blank"}
+* [Seminar page](https://thomas-vogel.github.io/ES4CPS/){:target="_blank"}
 
 ## Abstract
 This report documents the program and results of the GI-Dagstuhl Seminar 19023 on Explainable Software for Cyber-Physical Systems (ES4CPS). The seminar was concerned with the challenge that for future Cyber-Physical Systems (CPS), it will become increasingly relevant to explain their behavior (past, current, and future behavior, why a certain action was taken, how a certain goal can be achieved, etc.) to users, engineers, and other stakeholders. In order to increase the explainability of CPS and their engineering tools, fundamental, interdisciplinary research is required; solutions from multiple disciplines within software engineering, systems engineering, and related fields have to be applied, combined, and researched further. The goal of this seminar was to serve as a starting point for an interdisciplinary coordination of research activities targeting ES4CPS and an incubator of a new research community around this topic.
