--- a/_pages/publications/2010-MISE.md
+++ b/_pages/publications/2010-MISE.md
@@ -1,16 +1,15 @@
 ---
 title: Incremental Model Synchronization for Efficient Run-Time Monitoring
 permalink: publications/2010-MISE.html
-layout: paper
+layout: page
 ---
 
 ## Reference
 Thomas Vogel, Stefan Neumann, Stephan Hildebrandt, Holger Giese, and Basil Becker. "Incremental Model Synchronization for Efficient Run-Time Monitoring". In: Models in Software Engineering, Workshops and Symposia at MODELS 2009, Reports and Revised Selected Papers. Ed. by Sudipto Ghosh. Vol. 6002. Lecture Notes in Computer Science (LNCS). Springer, 2010, pp. 124--139. DOI: 10.1007/978-3-642-12261-3\_13
 
 ## Links
-[Open access version](https://zenodo.org/record/1248941){:target="_blank"}
-
-[Paper at SpringerLink](https://doi.org/10.1007/978-3-642-12261-3_13){:target="_blank"}
+* [Open access version](https://zenodo.org/record/1248941){:target="_blank"}
+* [Paper at SpringerLink](https://doi.org/10.1007/978-3-642-12261-3_13){:target="_blank"}
 
 ## Abstract
 The model-driven engineering community has developed expressive model transformation techniques based on metamodels, which ease the specification of translations between different model types. Thus, it is attractive to also apply these techniques for autonomic and self-adaptive systems at run-time to enable a comprehensive monitoring of their architectures while reducing development efforts. This requires special solutions for model transformation techniques as they are applied at run-time instead of their traditional usage at development time. In this paper we present an approach to ease the development of architectural monitoring based on incremental model synchronization with triple graph grammars. We show that the provided incremental synchronization between a running system and models for different self-management capabilities provides a significantly better compromise between performance and development costs than manually developed solutions.
