--- a/_pages/publications/2012-SFM.md
+++ b/_pages/publications/2012-SFM.md
@@ -1,16 +1,15 @@
 ---
 title: Graph Transformations for MDE, Adaptation, and Models at Runtime
 permalink: publications/2012-SFM.html
-layout: paper
+layout: page
 ---
 
 ## Reference
 Holger Giese, Leen Lambers, Basil Becker, Stephan Hildebrandt, Stefan Neumann, Thomas Vogel, and Sebastian Wätzoldt. "Graph Transformations for MDE, Adaptation, and Models at Runtime". In: Formal Methods for Model-Driven Engineering. Ed. by Marco Bernardo, Vittorio Cortellessa, and Alfonso Pierantonio. Vol. 7320. Lecture Notes in Computer Science (LNCS). Springer, 2012, pp. 137--191. DOI: 10.1007/978-3-642-30982-3\_5
 
 ## Links
-[Open access version](https://zenodo.org/record/1248920){:target="_blank"}
-
-[Paper at SpringerLink](https://doi.org/10.1007/978-3-642-30982-3_5){:target="_blank"}
+* [Open access version](https://zenodo.org/record/1248920){:target="_blank"}
+* [Paper at SpringerLink](https://doi.org/10.1007/978-3-642-30982-3_5){:target="_blank"}
 
 ## Abstract
 Software evolution and the resulting need to continuously adapt the software is one of the main challenges for software engineering. The model-driven development movement therefore aims at improving the longevity of software by keeping the development artifacts more consistent and better changeable by employing models and to a certain degree automated model operations. Another trend are systems that tackle the challenge at runtime by being able to adapt their structure and behavior to be more flexible and operate in more dynamic environments (e.g., context-aware software, autonomic computing, self-adaptive software). Finally, models at runtime, where the benefits of model-driven development are employed at runtime to support adaptation capabilities, today lead towards a unification of both ideas.
