--- a/_pages/publications/2015-FSEN.md
+++ b/_pages/publications/2015-FSEN.md
@@ -1,16 +1,15 @@
 ---
 title: Towards Smart Systems of Systems
 permalink: publications/2015-FSEN.html
-layout: paper
+layout: page
 ---
 
 ## Reference
 Holger Giese, Thomas Vogel, and Sebastian Wätzoldt. "Towards Smart Systems of Systems". In: International Conference on Fundamentals of Software Engineering (FSEN ’15). Vol. 9392. Lecture Notes in Computer Science (LNCS). Springer, 2015, pp. 1--29. DOI: 10.1007/978-3-319-24644-4\_1 _(invited paper)_.
 
 ## Links
-[Open access version](https://zenodo.org/record/1248943){:target="_blank"}
-
-[Paper at SpringerLink](https://doi.org/10.1007/978-3-319-24644-4_1){:target="_blank"}
+* [Open access version](https://zenodo.org/record/1248943){:target="_blank"}
+* [Paper at SpringerLink](https://doi.org/10.1007/978-3-319-24644-4_1){:target="_blank"}
 
 ## Abstract
 Systems of Systems (SoS) have started to emerge as a consequence of the general trend toward the integration of beforehand isolated systems. To unleash the full potential, the contained systems must be able to operate as elements in open, dynamic, and deviating SoS architectures and to adapt to open and dynamic contexts while being developed, operated, evolved, and governed independently. We name the resulting advanced SoS to be smart as they must be self-adaptive at the level of the individual systems and self-organizing at the SoS level to cope with the emergent behavior at that level. In this paper we analyze the open challenges for the envisioned smart SoS. In addition, we discuss our ideas for tackling this vision with our SMARTSOS approach that employs open and adaptive collaborations and models at runtime. In particular, we focus on preliminary ideas for the construction and assurance of smart SoS.
