--- a/_pages/publications/2017-TAAS.md
+++ b/_pages/publications/2017-TAAS.md
@@ -1,22 +1,22 @@
 ---
 title: Control Strategies for Self-Adaptive Software Systems
 permalink: publications/2017-TAAS.html
-layout: paper
+layout: page
 ---
 
 ## Reference
 Antonio Filieri, Martina Maggio, Konstantinos Angelopoulos, Nicolás D’ippolito, Ilias Gerostathopoulos, Andreas Berndt Hempel, Henry Hoffmann, Pooyan Jamshidi, Evangelia Kalyvianaki, Cristian Klein, Filip Krikava, Sasa Misailovic, Alessandro V. Papadopoulos, Suprio Ray, Amir M. Sharifloo, Stepan Shevtsov, Mateusz Ujma, and Thomas Vogel. "Control Strategies for Self-Adaptive Software Systems". In: ACM Trans. Auton. Adapt. Syst. 11.4 (2017), 24:1--24:31. DOI: 10.1145/3024188
 
 ## Links
-[Open access version](https://zenodo.org/record/1245483){:target="_blank"}
-
-<p>
+* [Open access version](https://zenodo.org/record/1245483){:target="_blank"}
+<ul><li>
 <!-- ACM DL Article: Control Strategies for Self-Adaptive Software Systems -->
-<div class="acmdlitem" id="item3024188"><img src="http://dl.acm.org/images/oa.gif" width="25" height="25" border="0" alt="ACM DL Author-ize service" style="vertical-align:middle"/><a href="https://dl.acm.org/authorize?N21277" title="Control Strategies for Self-Adaptive Software Systems">Free copy by the ACM DL Author-ize service</a>
-</div>
-</p>
-
-[Article at ACM DL](https://doi.org/10.1145/3024188){:target="_blank"}
+<!-- <div class="acmdlitem" id="item3024188">-->
+<a href="https://dl.acm.org/authorize?N21277" title="Control Strategies for Self-Adaptive Software Systems">Free copy by the ACM DL Author-ize service</a>
+<img src="http://dl.acm.org/images/oa.gif" width="25" height="25" border="0" alt="ACM DL Author-ize service" style="vertical-align:middle"/>
+<!-- </div> -->
+</li></ul>
+* [Article at ACM DL](https://doi.org/10.1145/3024188){:target="_blank"}
 
 ## Abstract
 The pervasiveness and growing complexity of software systems are challenging software engineering to design systems that can adapt their behavior to withstand unpredictable, uncertain, and continuously changing execution environments. Control theoretical adaptation mechanisms have received growing interest from the software engineering community in the last few years for their mathematical grounding, allowing formal guarantees on the behavior of the controlled systems. However, most of these mechanisms are tailored to specific applications and can hardly be generalized into broadly applicable software design and development processes. This article discusses a reference control design process, from goal identification to the verification and validation of the controlled system. A taxonomy of the main control strategies is introduced, analyzing their applicability to software adaptation for both functional and nonfunctional goals. A brief extract on how to deal with uncertainty complements the discussion. Finally, the article highlights a set of open challenges, both for the software engineering and the control theory research communities.
