Add link to IEEE DL for SASO'19.

--- a/_pages/publications/2019-SASO.md
+++ b/_pages/publications/2019-SASO.md
@@ -9,6 +9,7 @@ Erik Fredericks, Ilias Gerostathopoulos, Christian Krupitzer, and Thomas Vogel. 
 
 ## Links
 * [Open access version](https://arxiv.org/abs/1905.01071){:target="_blank"}
+* [Paper at IEEE Digital Library](https://www.computer.org/csdl/proceedings-article/2019/saso/1cJ7s6OxoZ2/1cJ7sBNmYbC){:target="_blank"}
 * [Paper at IEEE Xplore](https://doi.org/10.1109/SASO.2019.00010){:target="_blank"}
 * [Accompanying material: literature study](https://doi.org/10.5281/zenodo.2584266){:target="_blank"}
 * [Artifact/Code](https://github.com/iliasger/RTX/tree/saso19){:target="_blank"}
